--- a/pom.xml
+++ b/pom.xml
@@ -60,20 +60,23 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
+			<artifactId>spring-context</artifactId>
 			<version>4.3.11.RELEASE</version>
-		</dependency>		
+			<scope>provided</scope>
+		</dependency>	
 		<dependency>
-		    <groupId>javax.jms</groupId>
-		    <artifactId>javax.jms-api</artifactId>
-		    <version>2.0.1</version>
-		    <scope>provided</scope>
-		</dependency>		
-		<dependency>
-		    <groupId>org.apache.activemq</groupId>
-		    <artifactId>activemq-client</artifactId>
-		    <version>5.15.9</version>
+		    <groupId>jakarta.xml.bind</groupId>
+		    <artifactId>jakarta.xml.bind-api</artifactId>
+		    <version>2.3.2</version>
+		    <scope>runtime</scope>
 		</dependency>
+		<!-- Runtime, com.sun.xml.bind module -->
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		    <version>2.3.2</version>
+		    <scope>runtime</scope>
+		</dependency>			
 	</dependencies>
 	
 	<distributionManagement>
